--- a/OutlineTest/en.lproj/MainMenu.xib
+++ b/OutlineTest/en.lproj/MainMenu.xib
@@ -1264,7 +1264,7 @@
 										<object class="NSOutlineView" id="681700376">
 											<reference key="NSNextResponder" ref="544514126"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrameSize">{746, 369}</string>
+											<string key="NSFrameSize">{679, 369}</string>
 											<reference key="NSSuperview" ref="544514126"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="882237908"/>
@@ -1275,24 +1275,26 @@
 											<object class="NSTableHeaderView" key="NSHeaderView" id="61429113">
 												<reference key="NSNextResponder" ref="440488894"/>
 												<int key="NSvFlags">256</int>
-												<string key="NSFrameSize">{746, 17}</string>
+												<string key="NSFrameSize">{679, 17}</string>
 												<reference key="NSSuperview" ref="440488894"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="544514126"/>
+												<reference key="NSNextKeyView" ref="107025795"/>
 												<string key="NSReuseIdentifierKey">_NS:16</string>
 												<reference key="NSTableView" ref="681700376"/>
 											</object>
-											<object class="_NSCornerView" key="NSCornerView">
-												<nil key="NSNextResponder"/>
+											<object class="_NSCornerView" key="NSCornerView" id="107025795">
+												<reference key="NSNextResponder" ref="89215978"/>
 												<int key="NSvFlags">-2147483392</int>
 												<string key="NSFrame">{{224, 0}, {16, 17}}</string>
+												<reference key="NSSuperview" ref="89215978"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="544514126"/>
 												<string key="NSReuseIdentifierKey">_NS:18</string>
 											</object>
 											<array class="NSMutableArray" key="NSTableColumns">
 												<object class="NSTableColumn" id="695708015">
 													<string key="NSIdentifier">sKey</string>
-													<double key="NSWidth">244</double>
+													<double key="NSWidth">260</double>
 													<double key="NSMinWidth">16</double>
 													<double key="NSMaxWidth">1000</double>
 													<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -1376,45 +1378,13 @@
 													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="681700376"/>
 												</object>
-												<object class="NSTableColumn" id="207272610">
-													<string key="NSIdentifier">sType</string>
-													<double key="NSWidth">275</double>
-													<double key="NSMinWidth">10</double>
-													<double key="NSMaxWidth">3.4028234663852886e+38</double>
-													<object class="NSTableHeaderCell" key="NSHeaderCell">
-														<int key="NSCellFlags">75497536</int>
-														<int key="NSCellFlags2">2048</int>
-														<string key="NSContents"/>
-														<reference key="NSSupport" ref="26"/>
-														<object class="NSColor" key="NSBackgroundColor">
-															<int key="NSColorSpace">6</int>
-															<string key="NSCatalogName">System</string>
-															<string key="NSColorName">headerColor</string>
-															<object class="NSColor" key="NSColor" id="442487737">
-																<int key="NSColorSpace">3</int>
-																<bytes key="NSWhite">MQA</bytes>
-															</object>
-														</object>
-														<reference key="NSTextColor" ref="223765341"/>
-													</object>
-													<object class="NSTextFieldCell" key="NSDataCell" id="234131698">
-														<int key="NSCellFlags">337641536</int>
-														<int key="NSCellFlags2">2048</int>
-														<string key="NSContents">Text Cell</string>
-														<reference key="NSSupport" ref="431701125"/>
-														<reference key="NSControlView" ref="681700376"/>
-														<reference key="NSBackgroundColor" ref="350617988"/>
-														<reference key="NSTextColor" ref="133238818"/>
-													</object>
-													<int key="NSResizingMask">3</int>
-													<bool key="NSIsResizeable">YES</bool>
-													<bool key="NSIsEditable">YES</bool>
-													<reference key="NSTableView" ref="681700376"/>
-												</object>
 											</array>
 											<double key="NSIntercellSpacingWidth">3</double>
 											<double key="NSIntercellSpacingHeight">2</double>
-											<reference key="NSBackgroundColor" ref="442487737"/>
+											<object class="NSColor" key="NSBackgroundColor">
+												<int key="NSColorSpace">3</int>
+												<bytes key="NSWhite">MQA</bytes>
+											</object>
 											<object class="NSColor" key="NSGridColor">
 												<int key="NSColorSpace">6</int>
 												<string key="NSCatalogName">System</string>
@@ -1457,16 +1427,15 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<reference key="NSTarget" ref="89215978"/>
 									<string key="NSAction">_doScroller:</string>
-									<double key="NSPercent">0.93723849372384938</double>
+									<double key="NSPercent">0.95934959349593496</double>
 								</object>
 								<object class="NSScroller" id="78371271">
 									<reference key="NSNextResponder" ref="89215978"/>
-									<int key="NSvFlags">256</int>
+									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 370}, {679, 16}}</string>
 									<reference key="NSSuperview" ref="89215978"/>
 									<reference key="NSWindow"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
-									<bool key="NSEnabled">YES</bool>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<int key="NSsFlags">1</int>
 									<reference key="NSTarget" ref="89215978"/>
@@ -1488,17 +1457,19 @@
 									<reference key="NSBGColor" ref="350617988"/>
 									<int key="NScvFlags">4</int>
 								</object>
+								<reference ref="107025795"/>
 							</array>
 							<string key="NSFrame">{{20, 20}, {681, 387}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="440488894"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
-							<int key="NSsFlags">133810</int>
+							<int key="NSsFlags">133682</int>
 							<reference key="NSVScroller" ref="882237908"/>
 							<reference key="NSHScroller" ref="78371271"/>
 							<reference key="NSContentView" ref="544514126"/>
 							<reference key="NSHeaderClipView" ref="440488894"/>
+							<reference key="NSCornerView" ref="107025795"/>
 							<bytes key="NSScrollAmts">QSAAAEEgAABBmAAAQZgAAA</bytes>
 							<double key="NSMinMagnification">0.25</double>
 							<double key="NSMaxMagnification">4</double>
@@ -1524,7 +1495,7 @@
 								</object>
 								<string key="NSCellIdentifier">_NS:1535</string>
 								<reference key="NSControlView" ref="520093671"/>
-								<object class="NSColor" key="NSBackgroundColor">
+								<object class="NSColor" key="NSBackgroundColor" id="811259161">
 									<int key="NSColorSpace">6</int>
 									<string key="NSCatalogName">System</string>
 									<string key="NSColorName">controlColor</string>
@@ -1540,14 +1511,14 @@
 							<string key="NSFrame">{{20, 432}, {76, 58}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="520093671"/>
+							<reference key="NSNextKeyView" ref="649287186"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="426426058">
 								<int key="NSCellFlags">67108864</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">Open image</string>
-								<object class="NSFont" key="NSSupport">
+								<object class="NSFont" key="NSSupport" id="902912038">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">9</double>
 									<int key="NSfFlags">16</int>
@@ -1567,13 +1538,34 @@
 							</object>
 							<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 						</object>
+						<object class="NSTextField" id="649287186">
+							<reference key="NSNextResponder" ref="439893737"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{119, 453}, {108, 17}}</string>
+							<reference key="NSSuperview" ref="439893737"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="520093671"/>
+							<string key="NSReuseIdentifierKey">_NS:1535</string>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="394061654">
+								<int key="NSCellFlags">68157504</int>
+								<int key="NSCellFlags2">272630784</int>
+								<string key="NSContents">or Drag&amp;Drop image</string>
+								<reference key="NSSupport" ref="902912038"/>
+								<string key="NSCellIdentifier">_NS:1535</string>
+								<reference key="NSControlView" ref="649287186"/>
+								<reference key="NSBackgroundColor" ref="811259161"/>
+								<reference key="NSTextColor" ref="133238818"/>
+							</object>
+							<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+						</object>
 					</array>
 					<string key="NSFrameSize">{721, 490}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="847081808"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {2560, 1418}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1600, 878}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -2721,6 +2713,38 @@
 						<int key="objectID">372</int>
 						<reference key="object" ref="439893737"/>
 						<array class="NSMutableArray" key="children">
+							<object class="IBNSLayoutConstraint" id="632904809">
+								<reference key="firstItem" ref="649287186"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="439893737"/>
+								<int key="secondAttribute">5</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">122</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="439893737"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="842892758">
+								<reference key="firstItem" ref="649287186"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="439893737"/>
+								<int key="secondAttribute">3</int>
+								<float key="multiplier">1</float>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">20</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="439893737"/>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
+								<int key="contentType">3</int>
+							</object>
 							<object class="IBNSLayoutConstraint" id="470481644">
 								<reference key="firstItem" ref="89215978"/>
 								<int key="firstAttribute">3</int>
@@ -2852,6 +2876,7 @@
 							<reference ref="89215978"/>
 							<reference ref="520093671"/>
 							<reference ref="847081808"/>
+							<reference ref="649287186"/>
 						</array>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3345,7 +3370,6 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="695708015"/>
 							<reference ref="135329202"/>
-							<reference ref="207272610"/>
 						</array>
 						<reference key="parent" ref="89215978"/>
 					</object>
@@ -3520,17 +3544,69 @@
 						<reference key="parent" ref="847081808"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">617</int>
-						<reference key="object" ref="207272610"/>
+						<int key="objectID">619</int>
+						<reference key="object" ref="649287186"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="234131698"/>
+							<reference ref="394061654"/>
+							<object class="IBNSLayoutConstraint" id="852447488">
+								<reference key="firstItem" ref="649287186"/>
+								<int key="firstAttribute">7</int>
+								<int key="relation">0</int>
+								<nil key="secondItem"/>
+								<int key="secondAttribute">0</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">102</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="649287186"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">1</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="398972704">
+								<reference key="firstItem" ref="649287186"/>
+								<int key="firstAttribute">8</int>
+								<int key="relation">0</int>
+								<nil key="secondItem"/>
+								<int key="secondAttribute">0</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">17</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="649287186"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">1</int>
+							</object>
 						</array>
-						<reference key="parent" ref="681700376"/>
+						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">618</int>
-						<reference key="object" ref="234131698"/>
-						<reference key="parent" ref="207272610"/>
+						<int key="objectID">620</int>
+						<reference key="object" ref="394061654"/>
+						<reference key="parent" ref="649287186"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">622</int>
+						<reference key="object" ref="842892758"/>
+						<reference key="parent" ref="439893737"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">623</int>
+						<reference key="object" ref="398972704"/>
+						<reference key="parent" ref="649287186"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">625</int>
+						<reference key="object" ref="852447488"/>
+						<reference key="parent" ref="649287186"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">626</int>
+						<reference key="object" ref="632904809"/>
+						<reference key="parent" ref="439893737"/>
 					</object>
 				</array>
 			</object>
@@ -3602,6 +3678,8 @@
 					<reference ref="172741326"/>
 					<reference ref="197549203"/>
 					<reference ref="470481644"/>
+					<reference ref="842892758"/>
+					<reference ref="632904809"/>
 				</array>
 				<string key="372.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="375.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3725,8 +3803,17 @@
 				<string key="601.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="604.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="606.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="617.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="618.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<array class="NSMutableArray" key="619.IBNSViewMetadataConstraints">
+					<reference ref="398972704"/>
+					<reference ref="852447488"/>
+				</array>
+				<boolean value="NO" key="619.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
+				<string key="619.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="620.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="622.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="623.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="625.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="626.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="74.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3741,7 +3828,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">618</int>
+			<int key="maxID">627</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
